# vsslctrl

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/commandline/: README.md  cli.py
tests/: conftest.py  test_event_bus.py  test_integration.py  test_settings.py  test_zone.py
vsslctrl/: __init__.py  api_alpha.py  api_base.py  api_bravo.py  core.py  data_structure.py  decorators.py  device.py  discovery.py  event_bus.py  exceptions.py  group.py  io.py  settings.py  track.py  transport.py  utils.py  zone.py
